--- a/CHANGES
+++ b/CHANGES
@@ -17,7 +17,7 @@ o You can now use path's like /cvs:/roxen_src/server/modules as a module
 
 o The somewhat annoying 'Roxen is alive!' message will no longer be 
   written to the log once per minute unless something else is written
-  to the log.
+  to the log. It will only be output once if DEBUG isn't defined.
 
 o Root execution of CGI scripts disabled.
 
