Ftp-module fix.
Rev: CHANGES:1.48

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+Changes since Roxen Challenger 1.2 alpha 5
+-----------------------------------------------
+
+o Fixed permission bug in the ftp-module.
+
+
 Changes since Roxen Challenger 1.2 alpha 4
 -----------------------------------------------
 
