--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,19 @@ o Fixed permission bug in the ftp-module.
 
 o Userdatabase module using YP (NIS) added.
 
+o POSIX_SOURCE is now defined during the configure tests.
+
+o "This is (probably) the reason: 0" is hopefully gone now.
+
+o Now uses correct permissions when updating the etc/supports file.
+
+o #!NO in modules now seems to work.
+
+o Garbage-collector updated (thanks to Wilhelm Köhler).
+
+o Some bugs in the proxies fixed.
+
+
 
 Changes since Roxen Challenger 1.2 alpha 4
 -----------------------------------------------
