--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+Changes since Roxen Challenger 1.2 alpha 6
+-----------------------------------------------
+
+o Added option to create FTP servers.
+
+
 Changes since Roxen Challenger 1.2 alpha 5
 -----------------------------------------------
 
