Some more changes since 1.2 alpha 6.
Rev: CHANGES:1.58

--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,8 @@ Changes since Roxen Challenger 1.2 alpha 6
 
 o Added option to create FTP servers.
 
+o SSL3 speeded up.
+
 o Reenabled the "Roxen is alive!" output even if DEBUG isn't defined.
 
 o Added option to attempt setting of the RoxenUserID cookie only once.
@@ -16,8 +18,6 @@ o cgi.c now compiles on HPUX again.
 
 o Pike updated to 0.5b9.
 
-o SSL3 speeded up.
-
 o color.pike rgb_to_hsv() fixed for grayscales.
 
 o Module-level security now supports combinations of allow ip and allow user.
@@ -28,13 +28,13 @@ o Support for several font directories added.
 
 o roxen_hostname now started as root.
 
-o language-modules are now initialized in a sfer way.
+o language-modules are now initialized in a safer way.
 
 o privs.pike now contains a default-entry for the root user.
 
 o MIME.decode_base64() now used to decode HTTP-passwords.
 
-o Now gets updates from www.roxen.com instead of roxen.com.
+o Now gets updates from www.roxen.com instead of from roxen.com.
 
 o Reloading of the "New module" page now only recompiles the modified modules.
 
@@ -47,6 +47,10 @@ o Gtext-module now supports scroll.
 o Fixed CGI-bug.
 
 o Fixed FTP security bug.
+
+o Added profiling-info to debug-info for developers (requires patch to Pike).
+
+o htaccess now defaults the limit for HEAD to the same as that for GET.
 
 
 Changes since Roxen Challenger 1.2 alpha 5
