--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+Changes since Roxen Challenger 1.2 alpha 8
+-----------------------------------------------
+
+
 Changes since Roxen Challenger 1.2 alpha 7
 -----------------------------------------------
 
