Added changes since alpha 9.
Rev: CHANGES:1.69

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+Changes since Roxen Challenger 1.2 alpha 9
+-----------------------------------------------
+
+o Minor redesign of the buttons in the config-interface.
+
+
 Changes since Roxen Challenger 1.2 alpha 8
 -----------------------------------------------
 
