Copying of configs.
Rev: CHANGES:1.70

--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,8 @@ Changes since Roxen Challenger 1.2 alpha 9
 
 o Minor redesign of the buttons in the config-interface.
 
+o Copying of configurations now works again.
+
 
 Changes since Roxen Challenger 1.2 alpha 8
 -----------------------------------------------
